Fixed bugs
1: base.js had been executing the gallery plugin which messes with the page
2: log_in.css had not overriden #canvas overflow in css which caused the text aside of the log in box to be invisible

--- a/html/css/log_in.css
+++ b/html/css/log_in.css
@@ -12,6 +12,7 @@
    display:block;
    padding:5px;
    position:relative;
+   overflow: visible;
 }
 
 #canvas div#text
